--- a/src/staff/Frm_StaffDetails.form
+++ b/src/staff/Frm_StaffDetails.form
@@ -65,7 +65,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btn_Cancel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Cancle"/>
+        <Property name="text" type="java.lang.String" value="Cancel"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_CancelActionPerformed"/>
